# ZeroGraph

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  debug_flow.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  test_memory_issue.py  test_memory_issue2.py  test_thread_isolation.py
.github/workflows/: docs.yml  pypi-publish.yml
.opencode/plans/: 2026-05-20-code-review-fixes.md
api/: index.html
api/adapters/: index.html
api/cache/: index.html
api/channels/: index.html
api/checkpoint/: index.html
api/constants/: index.html
api/errors/: index.html
api/func/: index.html
api/graph/: index.html
api/prebuilt/: index.html
api/store/: index.html
api/types/: index.html
docs/: getting-started.md  index.md
docs/api/: adapters.md  cache.md  channels.md  checkpoint.md  constants.md  errors.md  func.md  graph.md  index.md  prebuilt.md  store.md  types.md
docs/how-to/: llm-streaming.md  react-agent.md  sqlite-checkpoint.md  supervisor.md  swarm.md  visualization.md
docs/tutorials/: basic-graph.md  cache-and-store.md  checkpointing.md  conditional-routing.md  error-handling.md  functional-api.md  interrupt-resume.md  streaming.md  (+2 more)
getting-started/: index.html
search/: search_index.json
test-project/: fuzz_test.py  main.py  stress_test.py
tests/: test_advanced.py  test_basic.py  test_channels.py  test_interrupt.py  test_llm_adapter.py  test_new_features.py  test_prebuilt.py  test_remaining.py  test_sqlite.py
zerograph/: __init__.py  _internal.py  cache.py  constants.py  errors.py  func.py  store.py  types.py  visualization.py
(+53 files in other folders)
