[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zerograph"
version = "0.2.0"
description = "A lightweight graph execution engine with zero external dependencies — state management, checkpointing, streaming, and multi-agent orchestration."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "韩飞摩", email = "minimizeball@foxmail.com" },
]
keywords = ["graph", "workflow", "state-machine", "agent", "langgraph", "pregel", "orchestration", "zerograph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ScarletMercy/ZeroGraph"
Repository = "https://github.com/ScarletMercy/ZeroGraph"
Changelog = "https://github.com/ScarletMercy/ZeroGraph/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-autorefs>=1.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
